bugfix on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -58,10 +58,10 @@ video {
 }
 
 .bonus {
-  height: 40px;
-  width: 40px;
+  height: 50px;
+  width: 50px;
   position: absolute;
-  font-size: 36px;
+  font-size: 48px;
   text-align: center;
   color: rgb(255, 169, 3);
 }
